test/functions/generic/poi/shadowing-method.good
shadowing-method.chpl:21: In method 'genericMethod':
shadowing-method.chpl:22: warning: in Library.MyRecord.method
  shadowing-method.chpl:10: called as MyRecord.genericMethod(type t = int(64))
shadowing-method.chpl:9: error: in Main.main, done
